--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /NetBeansProjects/TiendaComputadoras/build/
 /TiendaHerencia/nbproject/private/
 /TiendaHerencia/build/
+/Robert/nbproject/private/
+/Robert/build/
+/Robert/dist/
