--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Robert/nbproject/private/
 /Robert/build/
 /Robert/dist/
+/coleccionbin/target/
+/evaluaciones/target/
+/Evaluaciones_Salida/target/
