--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /coleccionbin/target/
 /evaluaciones/target/
 /Evaluaciones_Salida/target/
+/EvaluacionesAngela/nbproject/private/
+/EvaluacionesAngela/build/
