--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /evaluaciones/target/
 /Evaluaciones_Salida/target/
 /LeerArchivoPJava/LeerPenJ/nbproject/private/
+/LeerArchivoPJava/LeerPenJ/build/
