--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /LeerArchivoPJava/LeerPenJ/nbproject/private/
 /LeerArchivoPJava/LeerPenJ/build/
 /Proyectos/target/
+/LeerArchivoPJava/LeerPenJ/dist/
